--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,15 +54,11 @@ jobs:
 
       - name: Commit et push des données
         run: |
-          git config user.name  "github-actions[bot]"
+          git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
-          if git diff --cached --quiet; then
-            echo "Aucun changement."
-          else
-            git commit -m "chore(data): mise à jour automatique – $(date -u '+%Y-%m-%d %H:%M UTC') [skip ci]"
-            git push origin HEAD
-          fi
+          # On vérifie s'il y a des changements, sinon on ne fait rien sans erreur
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update data [skip ci]" && git push origin HEAD)
 
       - name: Configuration GitHub Pages
         uses: actions/configure-pages@v4
