--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,13 +53,21 @@ jobs:
           echo "Index : $(du -h data/index.json | cut -f1)"
 
       - name: Commit et push des données
+        continue-on-error: true # Force le passage à la suite même si Git râle
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
-          # On vérifie s'il y a des changements, sinon on ne fait rien sans erreur
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update data [skip ci]" && git push origin HEAD)
+          git commit -m "chore(data): mise à jour automatique [skip ci]" || echo "Rien à commit"
+          git push origin HEAD || echo "Rien à push"
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
       - name: Configuration GitHub Pages
         uses: actions/configure-pages@v4
 
