--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,17 @@ jobs:
           pip install requests
           python update.py || echo "Script Python a fini avec des alertes"
 
-      - name: Force Commit
+      - name: Commit et push des données
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
-          git commit -m "update data" || echo "Rien à commit"
-          git push origin HEAD || echo "Rien à push"
+          # On essaie de commit, si rien, on continue. Si conflit, on force le push.
+          if git commit -m "chore(data): mise à jour automatique [skip ci]"; then
+            git push origin HEAD --force
+          else
+            echo "Aucun changement à committer."
+          fi
 
       - name: Upload & Deploy
         uses: actions/upload-pages-artifact@v3
